--- a/0x00-Webpack/task_3/package.json
+++ b/0x00-Webpack/task_3/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "task_3",
+  "name": "task_2",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "start-dev": "webpack-dev-server --open",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.94.0",
+    "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
+    "jquery": "^3.7.0",
     "lodash": "^4.17.21"
-  },
-  "description": ""
+  }
 }
